chore(ssh-agent): add

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind-key ` send-prefix
 
 # split panes using | and -
 bind | splitw -h -p 50
-bind \\ splitw -v -p 50
+bind \ splitw -v -p 50
 unbind '"'
 unbind %
 
@@ -44,8 +44,8 @@ set-option -g status-keys vi
 set-window-option -g mode-keys vi
 
 # Copy/Paste Vim style
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+#bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 ######################
 ### DESIGN CHANGES ###
