--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,6 +21,10 @@ monitor=DP-5,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & dunst
+# Turn monitors off if locked (swaylock running) and idle for 10 seconds
+exec-once = swayidle -w timeout 10 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on'
+# Lock screen after idle for 300s and turn monitors off after 330
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 330 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -49,8 +53,8 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
+    gaps_out = 5
+    border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
@@ -60,7 +64,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 0
     blur = yes
     blur_size = 3
     blur_passes = 1
@@ -121,14 +125,16 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, C, killactive,
+bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
+bind = $mainMod, L, exec, swaylock -C $dir/swaylock/config
+
 # Screenshot a region
 bind = $mainMod, PRINT, exec, hyprshot -m region
 
