--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,1 +1,5 @@
 enable_audio_bell no
+font_family      JetBrainsMonoNL NFM Regular
+bold_font        JetBrainsMonoNL NFM Medium
+italic_font      JetBrainsMonoNL NFM Italic
+bold_italic_font JetBrainsMonoNL NFM Italic
