chore(hyprland): add gammastep

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ bindl=,switch:off:40da18c0,exec,hyprctl keyword monitor "eDP-1, disable"
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & dunst
+exec-once = waybar & dunst & gammastep
 # Turn monitors off if locked (swaylock running) and idle for 10 seconds
 exec-once = swayidle -w timeout 10 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on'
 # Lock screen after idle for 300s and turn monitors off after 330
