--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,18 +2,13 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 34, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
-    // Choose the order of the modules
-    "modules-left": ["wlr/workspaces", "idle_inhibitor"],
+    "modules-left": ["hyprland/workspaces", "idle_inhibitor"],
     "modules-center": ["hyprland/window"],
     "modules-right": ["pulseaudio", "backlight", "network", "cpu", "memory", "temperature", "battery", "tray", "clock"],
-    // Modules configuration
-     "wlr/workspaces": {
+     "hyperland/workspaces": {
          "disable-scroll": true,
          "on-click": "activate",
-         // "all-outputs": false,
-         // "format": "{name}: {icon}",
          "format": "{icon}",
          "on-scroll-up": "hyprctl dispatch workspace m-1 > /dev/null",
          "on-scroll-down": "hyprctl dispatch workspace m+1 > /dev/null",
