--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -63,9 +63,9 @@ general {
   sensitivity=1.00
   apply_sens_to_raw=1
   gaps_in = 4
-  gaps_out = 8
+  gaps_out = 4
   border_size = 1
-  resize_on_border = true
+  resize_on_border = false
 
   #one color
   #col.active_border = rgba(7aa2f7aa)
@@ -88,14 +88,14 @@ decoration {
   dim_inactive = true
   dim_strength = 0.1
 
-  drop_shadow=true
+  drop_shadow=false
   shadow_range=4
   shadow_render_power = 1
   col.shadow = rgb(cba7f7)
   col.shadow_inactive = 0x50000000
 
   blur {
-  enabled = true
+  enabled = yes
   size = 5
   passes = 1
   ignore_opacity = true
@@ -105,26 +105,6 @@ decoration {
 
 animations {
   enabled = yes
-
-  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-  bezier = linear, 0.0, 0.0, 1.0, 1.0
-  bezier = wind, 0.05, 0.9, 0.1, 1.05
-  bezier = winIn, 0.1, 1.1, 0.1, 1.1
-  bezier = winOut, 0.3, -0.3, 0, 1
-  bezier = slow, 0, 0.85, 0.3, 1
-  bezier = overshot, 0.7, 0.6, 0.1, 1.1
-  bezier = bounce, 1.1, 1.6, 0.1, 0.85
-  bezier = sligshot, 1, -1, 0.15, 1.25
-  bezier = nice, 0, 6.9, 0.5, -4.20
-
-  animation = windowsIn, 1, 5, slow, popin
-  animation = windowsOut, 1, 5, winOut, popin
-  animation = windowsMove, 1, 5, wind, slide
-  animation = border, 1, 10, linear
-  animation = borderangle, 1, 100, linear, loop
-  animation = fade, 1, 5, overshot
-  animation = workspaces, 1, 5, wind
-  animation = windows, 1, 5, bounce, popin
 }
 
 dwindle {
@@ -159,12 +139,6 @@ misc {
   no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
   swallow_regex = ^(kitty)$
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
 }
 
 # Example windowrule v1
