chore(): update tmux + hyprland

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,8 +7,8 @@ set-option -g prefix `
 bind-key ` send-prefix
 
 # split panes using | and -
-bind | splitw -h -p 50
-bind \\ splitw -v -p 50
+bind | splitw -h
+bind \\ splitw -v
 unbind '"'
 unbind %
 
