--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -85,7 +85,7 @@ decoration {
   inactive_opacity = 1.0
   fullscreen_opacity = 1.0
 
-  dim_inactive = true
+  dim_inactive = false
   dim_strength = 0.1
 
   drop_shadow=false
@@ -95,7 +95,7 @@ decoration {
   col.shadow_inactive = 0x50000000
 
   blur {
-  enabled = yes
+  enabled = no
   size = 5
   passes = 1
   ignore_opacity = true
@@ -104,7 +104,7 @@ decoration {
 }
 
 animations {
-  enabled = yes
+  enabled = no
 }
 
 dwindle {
